Intermediate commit. Fixing in progress.

--- a/py_scripts/resources/properties/sqlComparator.properties
+++ b/py_scripts/resources/properties/sqlComparator.properties
@@ -70,3 +70,9 @@ prod.rick.sqlHost = irl-0ifms-dev-cpo-bse06.maxifier.com
 prod.rick.sqlUser = monitor
 prod.rick.sqlPassword = kqQ2YecrU0y74Qb
 prod.rick.sqlDb = ifms4_cpopro
+
+[specificIgnoredTables]
+
+irving.ignoreTables =
+marvin.ignoreTables =
+rick.ignoreTables =
