--- a/py_scripts/resources/properties/sqlComparator.properties
+++ b/py_scripts/resources/properties/sqlComparator.properties
@@ -12,7 +12,7 @@ comparingStep = 10000
 depthReportCheck = 7
 hideColumns = archived,addonFields,hourOfDayS,dayOfWeekS,impCost,id,stateid,campaignid,creativeid,countryid,pageid,keynameid
 hideSQLQueries = False
-enableSchemaChecking = True
+enableSchemaChecking = False
 failWithFirstError = False
 includeSchemaColumns = TABLE_CATALOG,TABLE_NAME,COLUMN_NAME,ORDINAL_POSITION,COLUMN_DEFAULT,IS_NULLABLE,DATA_TYPE,CHARACTER_MAXIMUM_LENGTH,CHARACTER_OCTET_LENGTH,NUMERIC_PRECISION,NUMERIC_SCALE,DATETIME_PRECISION,CHARACTER_SET_NAME,COLLATION_NAME,COLUMN_TYPE,COLUMN_KEY,EXTRA,COLUMN_COMMENT,GENERATION_EXPRESSION
 # quickCheck property enables quick-check mode. Tables would be compared by short case (first N, where N = amountCheckingRecords record).
