1. Deleted hideSQLQueries property. 2. Clarified situation with multiple printing string: SELECT column_name FROM INFORMATION_SCHEMA.COLUMNS WHERE table_name = 'campaigngeoreport' AND table_schema = 'ifms3_i_cpopro'; Problem in getColumnList function and its calls in query-construct functions.

--- a/py_scripts/resources/properties/sqlComparator.properties
+++ b/py_scripts/resources/properties/sqlComparator.properties
@@ -2,7 +2,7 @@
 
 clients = irving,marvin,prisa,rick
 sendMailTo = pavel.kiselev@best4ad.com
-loggingLevel = 20
+loggingLevel = 10
 
 [sqlProperties]
 
@@ -11,8 +11,7 @@ amountCheckingRecords = 30000
 comparingStep = 10000
 depthReportCheck = 7
 hideColumns = archived,addonFields,hourOfDayS,dayOfWeekS,impCost,id,stateid,campaignid,creativeid,countryid,pageid,keynameid
-hideSQLQueries = False
-enableSchemaChecking = False
+enableSchemaChecking = True
 failWithFirstError = False
 includeSchemaColumns = TABLE_CATALOG,TABLE_NAME,COLUMN_NAME,ORDINAL_POSITION,COLUMN_DEFAULT,IS_NULLABLE,DATA_TYPE,CHARACTER_MAXIMUM_LENGTH,CHARACTER_OCTET_LENGTH,NUMERIC_PRECISION,NUMERIC_SCALE,DATETIME_PRECISION,CHARACTER_SET_NAME,COLLATION_NAME,COLUMN_TYPE,COLUMN_KEY,EXTRA,COLUMN_COMMENT,GENERATION_EXPRESSION
 # quickCheck property enables quick-check mode. Tables would be compared by short case (first N, where N = amountCheckingRecords record).
