1. Fixed bug with incorrect qualifying kind of table - entity table or report table. 2. Fixed bug with writing differences for one table for one big file. 3. Added logging checking time for all tables. 4. TODO's moved to sqlComparatorBacklog.txt. 5. Fixed bug with missing required arguments in writeUniqueEntitiesToFile function. 6. Fixed bug with incorrect writing of unique data to file. 7. Fix bug with missing ids named like city_id (which contained "_") in mapping construction. 8. Added creating/deleting service directory for temporary files. 9. Fixed misprint in function name constructOrdetList -> constructOrderList. 10. Fixed bug with missing some columns for order section in constructOrderList function. 11. Added ORDER-section to sql-queries in section-sum mode. 12. Fixed incorrect substitution ids to remoteids in select-queries. 13. All differences for each table now merged in one file instead many files. 14. Added headers to diff-files. 15. Added ugly crutch to prepareColumnMapping function.

--- a/py_scripts/resources/properties/sqlComparator.properties
+++ b/py_scripts/resources/properties/sqlComparator.properties
@@ -3,23 +3,20 @@
 clients = irving,marvin,prisa,rick
 sendMailTo = pavel.kiselev@best4ad.com
 loggingLevel = 10
+serviceDir = /tmp/comparator/
 
 [sqlProperties]
 
 # amountCheckingRecords - it's a threshold for huge tables. It equals amount of records (from beginning) which would be compared in both tables
-amountCheckingRecords = 30000
 comparingStep = 10000
 depthReportCheck = 7
-hideColumns = archived,addonFields,hourOfDayS,dayOfWeekS,impCost,id,stateid,campaignid,creativeid,countryid,pageid,keynameid
-enableSchemaChecking = True
+hideColumns = archived,addonFields,hourOfDayS,dayOfWeekS,impCost,id
+enableSchemaChecking = False
 failWithFirstError = False
 includeSchemaColumns = TABLE_CATALOG,TABLE_NAME,COLUMN_NAME,ORDINAL_POSITION,COLUMN_DEFAULT,IS_NULLABLE,DATA_TYPE,CHARACTER_MAXIMUM_LENGTH,CHARACTER_OCTET_LENGTH,NUMERIC_PRECISION,NUMERIC_SCALE,DATETIME_PRECISION,CHARACTER_SET_NAME,COLLATION_NAME,COLUMN_TYPE,COLUMN_KEY,EXTRA,COLUMN_COMMENT,GENERATION_EXPRESSION
-# quickCheck property enables quick-check mode. Tables would be compared by short case (first N, where N = amountCheckingRecords record).
-quickCheck = True
-reportCheckType = detailed
+reportCheckType = section-sum
 retryAttempts = 5
-# [WARN] creative_page_position table should be fixed
-tablesNotToCompare = databasechangelog,download,forecastexternalevent,forecastexternaleventhistories,forecastexternaleventtargeting,forecastquerytemplate,forecastquerytemplatehistory,forecastquerytemplatetargeting,migrationhistory,mntapplog,reportinfo,synchistory,syncstage,synctrace,campaign_excluded_pages,campaign_sites,creative_positios,pageforecaststatistics,product,producthistory,subproduct,campaign_excluded_only_pages,campaign_excluded_sites,campaign_only_pages,campaign_pages,forecaststatistics,creative_page_position
+tablesNotToCompare = databasechangelog,download,forecastexternalevent,forecastexternaleventhistories,forecastexternaleventtargeting,forecastquerytemplate,forecastquerytemplatehistory,forecastquerytemplatetargeting,migrationhistory,mntapplog,reportinfo,synchistory,syncstage,synctrace,synctracelink,campaign_excluded_pages,campaign_sites,creative_positios,pageforecaststatistics,product,producthistory,subproduct,syncpersistentjob,campaign_excluded_only_pages,campaign_excluded_sites,campaign_only_pages,campaign_pages,forecaststatistics
 
 [sqlParameters]
 
