1. Refactored getColumnList function. 2. Dramatically refactored constructColumnAndJoinSection function. 3. Removed stupid cunch "add t. to names".

--- a/py_scripts/resources/properties/sqlComparator.properties
+++ b/py_scripts/resources/properties/sqlComparator.properties
@@ -1,7 +1,8 @@
 [main]
 
-# clients = irving,marvin,prisa,rick
-clients = rick
+clients = irving,marvin,prisa,rick
+sendMailFrom = do-not-reply@inventale.com
+mailPassword = AKIAJHBVE2GQUQBRSQVA
 sendMailTo = pavel.kiselev@best4ad.com,nataly.lisitsyna@best4ad.com
 loggingLevel = 10
 serviceDir = /tmp/comparator/
@@ -17,7 +18,9 @@ failWithFirstError = False
 includeSchemaColumns = TABLE_CATALOG,TABLE_NAME,COLUMN_NAME,ORDINAL_POSITION,COLUMN_DEFAULT,IS_NULLABLE,DATA_TYPE,CHARACTER_MAXIMUM_LENGTH,CHARACTER_OCTET_LENGTH,NUMERIC_PRECISION,NUMERIC_SCALE,DATETIME_PRECISION,CHARACTER_SET_NAME,COLLATION_NAME,COLUMN_TYPE,COLUMN_KEY,EXTRA,COLUMN_COMMENT,GENERATION_EXPRESSION
 reportCheckType = day-sum
 retryAttempts = 5
-tablesNotToCompare = databasechangelog,download,forecastexternalevent,forecastexternaleventhistories,forecastexternaleventtargeting,forecastquerytemplate,forecastquerytemplatehistory,forecastquerytemplatetargeting,migrationhistory,mntapplog,reportinfo,synchistory,syncstage,synctrace,synctracelink,campaign_excluded_pages,campaign_sites,creative_positios,pageforecaststatistics,product,producthistory,subproduct,syncpersistentjob,campaign_excluded_only_pages,campaign_excluded_sites,campaign_only_pages,campaign_pages,forecaststatistics
+# tablesNotToCompare = databasechangelog,download,forecastexternalevent,forecastexternaleventhistories,forecastexternaleventtargeting,forecastquerytemplate,forecastquerytemplatehistory,forecastquerytemplatetargeting,migrationhistory,mntapplog,reportinfo,synchistory,syncstage,synctrace,synctracelink,campaign_excluded_pages,campaign_sites,creative_positios,pageforecaststatistics,product,producthistory,subproduct,syncpersistentjob,campaign_excluded_only_pages,campaign_excluded_sites,campaign_only_pages,campaign_pages,forecaststatistics
+tablesNotToCompare = databasechangelog,download,migrationhistory,mntapplog,reportinfo,synchistory,syncstage,synctrace,synctracelink,syncpersistentjob,forecaststatistics
+
 
 [sqlParameters]
 
@@ -43,8 +46,8 @@ test.prisa.sqlDb = prisa
 test.rick.sqlHost = samaradb03.maxifier.com
 test.rick.sqlUser = itest
 test.rick.sqlPassword = ohk9aeVahpiz1wi
-# test.rick.sqlDb = rick
-test.rick.sqlDb = rick_nl
+test.rick.sqlDb = rick
+# test.rick.sqlDb = rick_nl
 
 # prod irving
 prod.irving.sqlHost = ams-ifms-prd-dat-msq01.inventale.com
@@ -65,18 +68,15 @@ prod.prisa.sqlPassword = kqQ2YecrU0y74Qb
 prod.prisa.sqlDb = prisa
 
 # prod rick
-# prod.rick.sqlHost = irl-0ifms-dev-cpo-bse06.maxifier.com
-# prod.rick.sqlUser = monitor
-# prod.rick.sqlPassword = kqQ2YecrU0y74Qb
-# prod.rick.sqlDb = ifms4_cpopro
+prod.rick.sqlHost = irl-0ifms-dev-cpo-bse06.maxifier.com
+prod.rick.sqlUser = monitor
+prod.rick.sqlPassword = kqQ2YecrU0y74Qb
+prod.rick.sqlDb = ifms4_cpopro
 
-
-prod.rick.sqlHost = samaradb03.maxifier.com
-prod.rick.sqlUser = itest
-prod.rick.sqlPassword = ohk9aeVahpiz1wi
-# test.rick.sqlDb = rick
-prod.rick.sqlDb = rick_oldg
-
+# prod.rick.sqlHost = samaradb03.maxifier.com
+# prod.rick.sqlUser = itest
+# prod.rick.sqlPassword = ohk9aeVahpiz1wi
+# prod.rick.sqlDb = rick_oldg
 
 [specificIgnoredTables]
 
