--- a/py_scripts/dbComparator/resources/properties/sqlComparator.properties
+++ b/py_scripts/dbComparator/resources/properties/sqlComparator.properties
@@ -13,7 +13,7 @@ serviceDir = /tmp/comparator/
 comparingStep = 10000
 depthReportCheck = 7
 hideColumns = archived,addonFields,hourOfDayS,dayOfWeekS,impCost,id
-enableSchemaChecking = False
+enableSchemaChecking = True
 failWithFirstError = False
 includeSchemaColumns = TABLE_CATALOG,TABLE_NAME,COLUMN_NAME,ORDINAL_POSITION,COLUMN_DEFAULT,IS_NULLABLE,DATA_TYPE,CHARACTER_MAXIMUM_LENGTH,CHARACTER_OCTET_LENGTH,NUMERIC_PRECISION,NUMERIC_SCALE,DATETIME_PRECISION,CHARACTER_SET_NAME,COLLATION_NAME,COLUMN_TYPE,COLUMN_KEY,EXTRA,COLUMN_COMMENT,GENERATION_EXPRESSION
 reportCheckType = day-sum
