1. Blindly added win-suppotring. 2. Blndly added separate checking of entities/reports. 3. Blindly added posibility of writing messages to log file in loggingHelper.

--- a/py_scripts/dbComparator/resources/properties/sqlComparator.properties
+++ b/py_scripts/dbComparator/resources/properties/sqlComparator.properties
@@ -5,7 +5,6 @@ sendMailFrom = do-not-reply@inventale.com
 mailPassword = AKIAJHBVE2GQUQBRSQVA
 sendMailTo = pavel.kiselev@best4ad.com,nataly.lisitsyna@best4ad.com
 loggingLevel = 10
-serviceDir = /tmp/comparator/
 
 [sqlProperties]
 
@@ -15,11 +14,13 @@ depthReportCheck = 7
 hideColumns = archived,addonFields,hourOfDayS,dayOfWeekS,impCost,id
 enableSchemaChecking = True
 failWithFirstError = False
-includeSchemaColumns = TABLE_CATALOG,TABLE_NAME,COLUMN_NAME,ORDINAL_POSITION,COLUMN_DEFAULT,IS_NULLABLE,DATA_TYPE,CHARACTER_MAXIMUM_LENGTH,CHARACTER_OCTET_LENGTH,NUMERIC_PRECISION,NUMERIC_SCALE,DATETIME_PRECISION,CHARACTER_SET_NAME,COLLATION_NAME,COLUMN_TYPE,COLUMN_KEY,EXTRA,COLUMN_COMMENT,GENERATION_EXPRESSION
+schemaColumns = TABLE_CATALOG,TABLE_NAME,COLUMN_NAME,ORDINAL_POSITION,COLUMN_DEFAULT,IS_NULLABLE,DATA_TYPE,CHARACTER_MAXIMUM_LENGTH,CHARACTER_OCTET_LENGTH,NUMERIC_PRECISION,NUMERIC_SCALE,DATETIME_PRECISION,CHARACTER_SET_NAME,COLLATION_NAME,COLUMN_TYPE,COLUMN_KEY,EXTRA,COLUMN_COMMENT,GENERATION_EXPRESSION
 reportCheckType = day-sum
 retryAttempts = 5
 # tablesNotToCompare = databasechangelog,download,forecastexternalevent,forecastexternaleventhistories,forecastexternaleventtargeting,forecastquerytemplate,forecastquerytemplatehistory,forecastquerytemplatetargeting,migrationhistory,mntapplog,reportinfo,synchistory,syncstage,synctrace,synctracelink,campaign_excluded_pages,campaign_sites,creative_positios,pageforecaststatistics,product,producthistory,subproduct,syncpersistentjob,campaign_excluded_only_pages,campaign_excluded_sites,campaign_only_pages,campaign_pages,forecaststatistics
 tablesNotToCompare = databasechangelog,download,migrationhistory,mntapplog,reportinfo,synchistory,syncstage,synctrace,synctracelink,syncpersistentjob,forecaststatistics,migrationhistory
+# separateChecking can be setted as onlyEntities, onlyReports, both
+separateChecking = both
 
 
 [sqlParameters]
