1. Added UI. 2. Added backend version of comparator.

--- a/py_scripts/dbComparator/resources/properties/sqlComparator.properties
+++ b/py_scripts/dbComparator/resources/properties/sqlComparator.properties
@@ -1,6 +1,7 @@
 [main]
 
-clients = irving,marvin,prisa,rick
+# clients = irving,marvin,prisa,rick
+clients = marvin
 sendMailFrom = do-not-reply@inventale.com
 mailPassword = AKIAJHBVE2GQUQBRSQVA
 sendMailTo = pavel.kiselev@best4ad.com,nataly.lisitsyna@best4ad.com
@@ -35,7 +36,7 @@ test.irving.sqlDb = ifms_i_o_30
 test.marvin.sqlHost = samaradb03.maxifier.com
 test.marvin.sqlUser = itest
 test.marvin.sqlPassword = ohk9aeVahpiz1wi
-test.marvin.sqlDb = marvin
+test.marvin.sqlDb = marvin_nl_master
 
 # test prisa
 test.prisa.sqlHost = samaradb03.maxifier.com
@@ -57,10 +58,16 @@ prod.irving.sqlPassword = kqQ2YecrU0y74Qb
 prod.irving.sqlDb = ifms3_i_cpopro
 
 # prod marvin
-prod.marvin.sqlHost = ams-ifms-prd-dat-msq01.inventale.com
-prod.marvin.sqlUser = monitor
-prod.marvin.sqlPassword = kqQ2YecrU0y74Qb
-prod.marvin.sqlDb = ifms_m_cpopro
+# prod.marvin.sqlHost = ams-ifms-prd-dat-msq01.inventale.com
+# prod.marvin.sqlUser = monitor
+# prod.marvin.sqlPassword = kqQ2YecrU0y74Qb
+# prod.marvin.sqlDb = ifms_m_cpopro
+
+prod.marvin.sqlHost = samaradb03.maxifier.com
+prod.marvin.sqlUser = itest
+prod.marvin.sqlPassword = ohk9aeVahpiz1wi
+prod.marvin.sqlDb = marvin_nl_hibernate
+
 
 # prod prisa
 prod.prisa.sqlHost = us-njc-db-01.maxifier.com
