--- a/py_scripts/dbComparator/resources/properties/sqlComparator.properties
+++ b/py_scripts/dbComparator/resources/properties/sqlComparator.properties
@@ -19,7 +19,7 @@ schemaColumns = TABLE_CATALOG,TABLE_NAME,COLUMN_NAME,ORDINAL_POSITION,COLUMN_DEF
 reportCheckType = day-sum
 retryAttempts = 5
 # tablesNotToCompare = databasechangelog,download,forecastexternalevent,forecastexternaleventhistories,forecastexternaleventtargeting,forecastquerytemplate,forecastquerytemplatehistory,forecastquerytemplatetargeting,migrationhistory,mntapplog,reportinfo,synchistory,syncstage,synctrace,synctracelink,campaign_excluded_pages,campaign_sites,creative_positios,pageforecaststatistics,product,producthistory,subproduct,syncpersistentjob,campaign_excluded_only_pages,campaign_excluded_sites,campaign_only_pages,campaign_pages,forecaststatistics
-tablesNotToCompare = databasechangelog,download,migrationhistory,mntapplog,reportinfo,synchistory,syncstage,synctrace,synctracelink,syncpersistentjob,forecaststatistics,migrationhistory
+tablesNotToCompare = databasechangelog,download,migrationhistory,mntapplog,reportinfo,synchistory,syncstage,synctrace,synctracelink,syncpersistentjob,forecaststatistics,migrationhistory,campaign_pages
 # separateChecking can be setted as onlyEntities, onlyReports, both
 separateChecking = both
 
