Fixed headless version of comparator.

--- a/py_scripts/dbComparator/resources/properties/sqlComparator.properties
+++ b/py_scripts/dbComparator/resources/properties/sqlComparator.properties
@@ -1,27 +1,28 @@
 [main]
 
-# clients = irving,marvin,prisa,rick
-clients = marvin
-sendMailFrom = do-not-reply@inventale.com
-mailPassword = AKIAJHBVE2GQUQBRSQVA
-sendMailTo = pavel.kiselev@best4ad.com,nataly.lisitsyna@best4ad.com
-loggingLevel = 10
+clients = irving,marvin,rick
+send_mail_from = do-not-reply@inventale.com
+mail_password = AKIAJHBVE2GQUQBRSQVA
+send_mail_to = pavel.kiselev@best4ad.com,nataly.lisitsyna@best4ad.com
+logging_level = 10
 
 [sqlProperties]
 
 # amountCheckingRecords - it's a threshold for huge tables. It equals amount of records (from beginning) which would be compared in both tables
-comparingStep = 10000
-depthReportCheck = 7
-hideColumns = archived,addonFields,hourOfDayS,dayOfWeekS,impCost,id
-enableSchemaChecking = True
-failWithFirstError = False
-schemaColumns = TABLE_CATALOG,TABLE_NAME,COLUMN_NAME,ORDINAL_POSITION,COLUMN_DEFAULT,IS_NULLABLE,DATA_TYPE,CHARACTER_MAXIMUM_LENGTH,CHARACTER_OCTET_LENGTH,NUMERIC_PRECISION,NUMERIC_SCALE,DATETIME_PRECISION,CHARACTER_SET_NAME,COLLATION_NAME,COLUMN_TYPE,COLUMN_KEY,EXTRA,COLUMN_COMMENT,GENERATION_EXPRESSION
-reportCheckType = day-sum
-retryAttempts = 5
+comparing_step = 10000
+depth_report_check = 7
+hide_columns = archived,addonFields,hourOfDayS,dayOfWeekS,impCost,id
+strings_amount = 1000
+check_schema = True
+fail_with_first_error = False
+schema_columns = TABLE_CATALOG,TABLE_NAME,COLUMN_NAME,ORDINAL_POSITION,COLUMN_DEFAULT,IS_NULLABLE,DATA_TYPE,CHARACTER_MAXIMUM_LENGTH,CHARACTER_OCTET_LENGTH,NUMERIC_PRECISION,NUMERIC_SCALE,DATETIME_PRECISION,CHARACTER_SET_NAME,COLLATION_NAME,COLUMN_TYPE,COLUMN_KEY,EXTRA,COLUMN_COMMENT,GENERATION_EXPRESSION
+report_check_type = day-sum
+retry_attempts = 5
+table_timeout = 5
 # tablesNotToCompare = databasechangelog,download,forecastexternalevent,forecastexternaleventhistories,forecastexternaleventtargeting,forecastquerytemplate,forecastquerytemplatehistory,forecastquerytemplatetargeting,migrationhistory,mntapplog,reportinfo,synchistory,syncstage,synctrace,synctracelink,campaign_excluded_pages,campaign_sites,creative_positios,pageforecaststatistics,product,producthistory,subproduct,syncpersistentjob,campaign_excluded_only_pages,campaign_excluded_sites,campaign_only_pages,campaign_pages,forecaststatistics
-tablesNotToCompare = databasechangelog,download,migrationhistory,mntapplog,reportinfo,synchistory,syncstage,synctrace,synctracelink,syncpersistentjob,forecaststatistics,migrationhistory,campaign_pages
+tables_not_to_compare = databasechangelog,download,migrationhistory,mntapplog,reportinfo,synchistory,syncstage,synctrace,synctracelink,syncpersistentjob,forecaststatistics,migrationhistory,campaign_pages
 # separateChecking can be setted as onlyEntities, onlyReports, both
-separateChecking = both
+separate_checking =
 
 
 [sqlParameters]
@@ -30,26 +31,19 @@ separateChecking = both
 test.irving.sqlHost = samaradb03.maxifier.com
 test.irving.sqlUser = itest
 test.irving.sqlPassword = ohk9aeVahpiz1wi
-test.irving.sqlDb = ifms_i_o_30
+test.irving.sqlDb = irving
 
 # test marvin
 test.marvin.sqlHost = samaradb03.maxifier.com
 test.marvin.sqlUser = itest
 test.marvin.sqlPassword = ohk9aeVahpiz1wi
-test.marvin.sqlDb = marvin_nl_master
-
-# test prisa
-test.prisa.sqlHost = samaradb03.maxifier.com
-test.prisa.sqlUser = itest
-test.prisa.sqlPassword = ohk9aeVahpiz1wi
-test.prisa.sqlDb = prisa
+test.marvin.sqlDb = marvin
 
 # test rick
 test.rick.sqlHost = samaradb03.maxifier.com
 test.rick.sqlUser = itest
 test.rick.sqlPassword = ohk9aeVahpiz1wi
 test.rick.sqlDb = rick
-# test.rick.sqlDb = rick_nl
 
 # prod irving
 prod.irving.sqlHost = ams-ifms-prd-dat-msq01.inventale.com
@@ -58,33 +52,16 @@ prod.irving.sqlPassword = kqQ2YecrU0y74Qb
 prod.irving.sqlDb = ifms3_i_cpopro
 
 # prod marvin
-# prod.marvin.sqlHost = ams-ifms-prd-dat-msq01.inventale.com
-# prod.marvin.sqlUser = monitor
-# prod.marvin.sqlPassword = kqQ2YecrU0y74Qb
-# prod.marvin.sqlDb = ifms_m_cpopro
-
-prod.marvin.sqlHost = samaradb03.maxifier.com
-prod.marvin.sqlUser = itest
-prod.marvin.sqlPassword = ohk9aeVahpiz1wi
-prod.marvin.sqlDb = marvin_nl_hibernate
-
-
-# prod prisa
-prod.prisa.sqlHost = us-njc-db-01.maxifier.com
-prod.prisa.sqlUser = monitor
-prod.prisa.sqlPassword = kqQ2YecrU0y74Qb
-prod.prisa.sqlDb = prisa
+prod.marvin.sqlHost = ams-ifms-prd-dat-msq01.inventale.com
+prod.marvin.sqlUser = monitor
+prod.marvin.sqlPassword = kqQ2YecrU0y74Qb
+prod.marvin.sqlDb = ifms_m_cpopro
 
 # prod rick
 prod.rick.sqlHost = irl-0ifms-dev-cpo-bse06.maxifier.com
 prod.rick.sqlUser = monitor
 prod.rick.sqlPassword = kqQ2YecrU0y74Qb
 prod.rick.sqlDb = ifms4_cpopro
-
-# prod.rick.sqlHost = samaradb03.maxifier.com
-# prod.rick.sqlUser = itest
-# prod.rick.sqlPassword = ohk9aeVahpiz1wi
-# prod.rick.sqlDb = rick_oldg
 
 [specificIgnoredTables]
 
