--- a/py_scripts/dbComparator/resources/properties/sqlComparator.properties
+++ b/py_scripts/dbComparator/resources/properties/sqlComparator.properties
@@ -23,6 +23,7 @@ table_timeout = 5
 tables_not_to_compare = databasechangelog,download,migrationhistory,mntapplog,reportinfo,synchistory,syncstage,synctrace,synctracelink,syncpersistentjob,forecaststatistics,migrationhistory,campaign_pages
 # separateChecking can be setted as onlyEntities, onlyReports, both
 separate_checking =
+only_reports = False
 
 
 [sqlParameters]
